# papermake

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
crates/papermake/: Cargo.toml  todo.txt
crates/papermake-registry/: Cargo.toml  README.md
crates/papermake-registry/data/: papermake.db
crates/papermake-registry/examples/: manual_test.rs
crates/papermake-registry/src/: address.rs  bundle.rs  entities.rs  error.rs  lib.rs  manifest.rs  reference.rs  registry.rs  storage.rs  template_ref.rs
crates/papermake-registry/src/render_storage/: clickhouse.rs  mod.rs  types.rs
crates/papermake-registry/src/storage/: blob_storage.rs  file_storage.rs  filesystem.rs  mod.rs  postgres.rs  registry_filesystem.rs  s3_storage.rs  sqlite_storage.rs  sqlite_storage_old.rs  tikv_storage.rs
crates/papermake-registry/tests/: integration_tests.rs
crates/papermake-server/: Cargo.toml  Dockerfile
crates/papermake-server/src/: config.rs  error.rs  main.rs  models.rs  routes.rs  services.rs  worker.rs
crates/papermake-server/src/models/: analytics.rs  api.rs  mod.rs  render.rs  template.rs
crates/papermake-server/src/routes/: analytics.rs  mod.rs  render.rs  renders.rs  templates.rs  websocket.rs
crates/papermake-server/src/services/: analytics_service.rs  render_service.rs  template_service.rs
crates/papermake-worker/: Cargo.toml
crates/papermake-worker/src/: main.rs
crates/papermake/src/: cache.rs  error.rs  lib.rs  macros.rs  render.rs  schema.rs  storage.rs  template.rs  typst.rs
crates/papermake/src/storage/: file.rs  mod.rs
crates/papermake/tests/: cache_tests.rs  ergonomic_cache_tests.rs  render_tests.rs  template_tests.rs
webui/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
webui/.subframe/: sync.json
webui/src/app/: page.tsx
webui/src/app/templates/[templateId]/: page.tsx
webui/src/app/templates/[templateName]/: page.tsx
webui/src/components/: NewTemplateModal.tsx
webui/src/lib/: api.ts  types.ts
webui/src/ui/: index.ts  tailwind.config.js
webui/src/ui/components/: Accordion.tsx  Alert.tsx  AreaChart.tsx  AreaChart2.tsx  Avatar.tsx  Badge.tsx  BarChart.tsx  Breadcrumbs.tsx  Button.tsx  Calendar.tsx  Checkbox.tsx  CheckboxCard.tsx  CheckboxGroup.tsx  ContextMenu.tsx  CopyToClipboardButton.tsx  Dialog.tsx  Drawer.tsx  DropdownMenu.tsx  FullscreenDialog.tsx  IconButton.tsx  IconWithBackground.tsx  LineChart.tsx  LinkButton.tsx  Loader.tsx  PDFViewer.tsx  PieChart.tsx  Progress.tsx  RadioCardGroup.tsx  RadioGroup.tsx  Select.tsx  SidebarRailWithLabels.tsx  SidebarWithSections.tsx  SkeletonCircle.tsx  SkeletonText.tsx  Slider.tsx  Stepper.tsx  Switch.tsx  Table.tsx  Tabs.tsx  TextArea.tsx  (+6 more)
webui/src/ui/layouts/: DefaultPageLayout.tsx  DialogLayout.tsx  DrawerLayout.tsx
