[package]
name = "papermake-server"
version = "0.1.0"
edition = "2024"

[dependencies]
papermake = { path = "../papermake" }
tokio = { version = "1", features = ["full"] }
axum = "0.8.3"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
] }
base64 = "0.22"
