[package]
name = "papermake"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
async-trait = "0.1"
tokio = { version = "1.44", features = ["fs", "sync"] }

# Typst
typst = "0.13"
typst-kit = "0.13"
typst-library = "0.13"
typst-pdf = "0.13"
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }
tar = "0.4"
ureq = "3.0"
flate2 = "1.1"
ttf-parser = "0.25"

[dev-dependencies]
tempfile = "3.19"
tokio = { version = "1.44", features = ["full"] }
